--- a/cookbooks/wildfly/templates/default/postgres-ds.xml.erb
+++ b/cookbooks/wildfly/templates/default/postgres-ds.xml.erb
@@ -7,7 +7,7 @@
       this in META-INF/persistence.xml -->
   <datasource jndi-name="<%= @jndi_name %>" pool-name="PostgreSQL" enabled="true">
     <connection-url>jdbc:postgresql://<%= @postgres_server %>:<%= @postgres_port %>/<%= @postgres_db_name %></connection-url>
-    <driver>postgres</driver>
+    <driver>postgresql</driver>
     <pool>
 	  <min-pool-size><%= @postgres_pool_min %></min-pool-size>
 	  <max-pool-size><%= @postgres_pool_max %></max-pool-size>
